Scrollbar fix

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,29 @@ body {
   margin: 0;
 }
 
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track {
+  border: 4px solid transparent;
+  background-clip: padding-box;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: hsl(210,9.8%,20%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #202225;
+}
+
 #start {
   display: flex;
   align-items: center;
